--- a/src/assets/style/colors.scss
+++ b/src/assets/style/colors.scss
@@ -2,12 +2,14 @@
 // $darkPrimary: #0000ff;
 // $primary: #999900;
 // $darkPrimary: #525100;
-$primary: #0064B1;
+$primary: #54B2A7;
 $darkPrimary: #0064B1;
 $hover: #ccc;
-$secondary: #F3E4A7;
+// $secondary: #F3E4A7;
+$secondary: #F4BCA8;
 $gray: #ccc;
 $white: #ffffff;;
-$warning: #e0a800;
+// $warning: #e0a800;
+$warning: #2F80ED;
 $danger: #f7786b;
 $textBlue: #007bff;
