--- a/src/assets/style/colors.scss
+++ b/src/assets/style/colors.scss
@@ -2,11 +2,11 @@
 // $darkPrimary: #0000ff;
 // $primary: #999900;
 // $darkPrimary: #525100;
-$primary: #54B2A7;
-$darkPrimary: #0064B1;
+$primary: #5842D7;
+$darkPrimary: #5842D7;
 $hover: #ccc;
 // $secondary: #F3E4A7;
-$secondary: #F4BCA8;
+$secondary: #BF97F2;
 $gray: #ccc;
 $white: #ffffff;;
 // $warning: #e0a800;
